--- a/main.css
+++ b/main.css
@@ -5,7 +5,8 @@
 }
 #all{
     height: 100vh;
-    background: linear-gradient(to right,#ffd89b,#19547b);
+    background: linear-gradient(to right,#e8ccff,#D1E5F0);
+
 }
 /*input container*/
 #inputerrorbox{
@@ -205,11 +206,13 @@ input:focus{
     
 }
 #addbtn{
-    background: #d8d8d8;
+    color: white;
+    background: #241400;
     padding: 7px 17px;
     border: none;
     border-radius: 50%;
     cursor: pointer;
+}
 }
 /*content*/
 #content{
@@ -227,7 +230,7 @@ input:focus{
     list-style: none;
     max-width: 79%;
     word-wrap: break-word;
-    background-color: #b4b4b4;
+    background-color: #f5f5f5;
     color: rgb(0, 0, 0);
     border-radius: 5px;
     box-shadow: 4px 4px 4px #555;
